glass classification model using XGBoost Classifier

--- a/glass_classification_model.ipynb
+++ b/glass_classification_model.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Glass Classification using xgboost\n",
     "\n",
-    "###### This is a Glass Identification Data Set from UCI. It contains 10 attributes including id. The response is glass type(discrete 7 values)\n"
+    "###### XGBoost classifier is used for Glass Identification ; The Dataset is from UCI. It contains 10 attributes including id. The response is glass type(discrete 7 values)\n"
    ]
   },
   {
@@ -174,6 +174,13 @@
     "X_train, Y_train, X_test, Y_test, stats = load_dataset(csv_name = \"glass.csv\", train_test_split = train_test_split, is_normalization=False)\n",
     "\n",
     "print(\"X_train shape:{}\\nY_train shape:{}\\nX_test shape:{}\\nY_test shape:{}\".format(X_train.shape, Y_train.shape, X_test.shape, Y_test.shape))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Call the XGBoost classifier "
    ]
   },
   {
