glass classification model using XGBoost Classifier

--- a/glass_classification_model.ipynb
+++ b/glass_classification_model.ipynb
@@ -94,15 +94,40 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 214 entries, 0 to 213\n",
+      "Data columns (total 10 columns):\n",
+      "RI      214 non-null float64\n",
+      "Na      214 non-null float64\n",
+      "Mg      214 non-null float64\n",
+      "Al      214 non-null float64\n",
+      "Si      214 non-null float64\n",
+      "K       214 non-null float64\n",
+      "Ca      214 non-null float64\n",
+      "Ba      214 non-null float64\n",
+      "Fe      214 non-null float64\n",
+      "Type    214 non-null int64\n",
+      "dtypes: float64(9), int64(1)\n",
+      "memory usage: 16.8 KB\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "print(data.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -210,30 +235,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "features importance: [0.18766999 0.14188577 0.16999093 0.11332729 0.07298277 0.09972802\n",
-      " 0.13236627 0.03762466 0.0444243 ]\n",
+      "features importance: [0.12835959 0.11445783 0.17886932 0.11306766 0.13113995 0.11538462\n",
+      " 0.11816496 0.03799815 0.06255792]\n",
       "=== Confusion Matrix ===\n",
-      "[[22  2  0  0  0  0]\n",
-      " [ 4 23  1  0  0  0]\n",
-      " [ 2  1  0  0  0  0]\n",
-      " [ 0  0  0  3  0  1]\n",
-      " [ 0  0  0  0  3  0]\n",
-      " [ 0  0  0  0  0 10]]\n",
+      "[[23  1  1  0  0  0]\n",
+      " [ 3 18  0  0  3  0]\n",
+      " [ 3  1  2  0  0  0]\n",
+      " [ 0  0  0  6  0  0]\n",
+      " [ 0  0  0  0  2  0]\n",
+      " [ 1  0  0  1  0  7]]\n",
       "\n",
       "\n",
       "=== Classification Report ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       0.79      0.92      0.85        24\n",
-      "           2       0.88      0.82      0.85        28\n",
-      "           3       0.00      0.00      0.00         3\n",
-      "           5       1.00      0.75      0.86         4\n",
-      "           6       1.00      1.00      1.00         3\n",
-      "           7       0.91      1.00      0.95        10\n",
+      "           1       0.77      0.92      0.84        25\n",
+      "           2       0.90      0.75      0.82        24\n",
+      "           3       0.67      0.33      0.44         6\n",
+      "           5       0.86      1.00      0.92         6\n",
+      "           6       0.40      1.00      0.57         2\n",
+      "           7       1.00      0.78      0.88         9\n",
       "\n",
-      "   micro avg       0.85      0.85      0.85        72\n",
-      "   macro avg       0.76      0.75      0.75        72\n",
-      "weighted avg       0.83      0.85      0.83        72\n",
+      "   micro avg       0.81      0.81      0.81        72\n",
+      "   macro avg       0.77      0.80      0.74        72\n",
+      "weighted avg       0.83      0.81      0.80        72\n",
       "\n"
      ]
     }
@@ -257,7 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 84.72222222222221\n"
+      "Accuracy: 80.55555555555556\n"
      ]
     }
    ],
